[sensors] Drop DEVICE_SENSOR_EXPORT macro

It is not needed as 'generic_sensor' is build as a source set and it causes linker warnings on windows component build.

BUG=640769

Review-Url: https://codereview.chromium.org/2277353002
Cr-Commit-Position: refs/heads/master@{#414714}