device/generic_sensor/platform_sensor_configuration.h
@@ -7,11 +7,10 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #define DEVICE_GENERIC_SENSOR_PLATFORM_SENSOR_CONFIGURATION_H_
 
 #include "base/logging.h"
-#include "device/generic_sensor/sensor_export.h"
 
 namespace device {
 
-class DEVICE_SENSOR_EXPORT PlatformSensorConfiguration {
+class PlatformSensorConfiguration {
  public:
   PlatformSensorConfiguration();
   explicit PlatformSensorConfiguration(double frequency);
