device/generic_sensor/sensor_provider_impl.h
@@ -8,7 +8,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "base/macros.h"
 #include "device/generic_sensor/public/interfaces/sensor_provider.mojom.h"
-#include "device/generic_sensor/sensor_export.h"
 #include "mojo/public/cpp/bindings/strong_binding.h"
 
 namespace device {
@@ -20,8 +19,7 @@ class PlatformSensorProvider;
 // of PlatformSensor which are used by SensorImpl.
 class SensorProviderImpl final : public mojom::SensorProvider {
  public:
-  DEVICE_SENSOR_EXPORT static void Create(
-      mojo::InterfaceRequest<mojom::SensorProvider> request);
+  static void Create(mojo::InterfaceRequest<mojom::SensorProvider> request);
 
   ~SensorProviderImpl() override;
 
